set(TARGET_NAME amsrVectorAppExampleCalculatorClient)
set(ADAPTIVE_AUTOSAR_APPLICATION_NAME adaptiveCalculatorClient)

# Collect Sources
file(GLOB_RECURSE CALCULATORCLIENT_SRCS ${PROJECT_SOURCE_DIR}/src/client/*.cc)
message(STATUS "CALCULATORCLIENT_SRCS: ${CALCULATORCLIENT_SRCS}")

# Collect Generated Sources
file(GLOB_RECURSE CALCULATORCLIENT_GEN_SRCS_SOMEIP ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/someip-posix/*.cc)
file(GLOB_RECURSE CALCULATORCLIENT_GEN_SRCS ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/src/*.cc)
file(GLOB_RECURSE CALCULATORCLIENT_GEN_SRCS_VECTOR ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/vector/*.cc)
set(CALCULATORCLIENT_GEN_SRCS ${CALCULATORCLIENT_GEN_SRCS} ${CALCULATORCLIENT_GEN_SRCS_SOMEIP} ${CALCULATORCLIENT_GEN_SRCS_VECTOR})
message(STATUS "CALCULATORCLIENT_GEN_SRCS: ${CALCULATORCLIENT_GEN_SRCS}")

# Build
add_executable(${TARGET_NAME} ${CALCULATORCLIENT_SRCS} ${CALCULATORCLIENT_GEN_SRCS})

target_link_libraries(${TARGET_NAME}
    ${ARA_SOMEIP_POSIX_LIBRARIES}
    ${PERSISTENCY_LIBRARIES}
    ${ARA_LOGGING_LIBRARIES}
    ${ADAPTIVEPLATFORM_LIBRARIES}
    ${VAC_LIBRARIES}
)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ARA_EXEC_FLAGS}")
target_link_libraries(${TARGET_NAME} ${ARA_EXEC_LIBRARIES})

if (USE_ARA_PER)
  target_link_libraries(${TARGET_NAME} ${PERSISTENCY_LIBRARIES})
endif()

# Deploy
install(TARGETS ${TARGET_NAME} RUNTIME DESTINATION /opt/${TARGET_NAME}/bin)
install(FILES ${MANIFEST_FILE_CLIENT} PERMISSIONS OWNER_READ GROUP_READ WORLD_READ DESTINATION /opt/${TARGET_NAME}/etc/ RENAME ${MANIFEST_TARGET_FILENAME})

# Collect Includes
target_include_directories(${TARGET_NAME} PRIVATE
    ${ARA_LOGGING_INCLUDE_DIRS}
    ${VAC_INCLUDE_DIRS}
    ${PERSISTENCY_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/addon/${TARGET_NAME}/
)

# Collect Generated Includes
target_include_directories(${TARGET_NAME} PRIVATE
    ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/includes
    ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/someip-posix
)


# Deploy
install(FILES ${PROJECT_SOURCE_DIR}/src-gen/etc/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/application.json PERMISSIONS OWNER_READ GROUP_READ WORLD_READ DESTINATION /opt/${TARGET_NAME}/etc/)
install(FILES ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/manifest/someip/application-gen.json PERMISSIONS OWNER_READ GROUP_READ WORLD_READ DESTINATION /opt/${TARGET_NAME}/etc/)
install(FILES ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/manifest/em/${TARGET_NAME}/manifest.json PERMISSIONS OWNER_READ GROUP_READ WORLD_READ DESTINATION /opt/${TARGET_NAME}/etc  RENAME manifest.json)
