set(TARGET_NAME amsrVectorAppExampleCalculatorServer)
set(ADAPTIVE_AUTOSAR_APPLICATION_NAME adaptiveCalculatorServer)

# Collect Static Sources
file(GLOB_RECURSE CALCULATORSERVER_SRCS ${PROJECT_SOURCE_DIR}/src/server/*.cc)
message(STATUS "CALCULATORSERVER_SRCS: ${CALCULATORSERVER_SRCS}")

file(GLOB_RECURSE CALCULATORSERVER_GEN_SRCS_SOMEIP ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/someip-posix/*.cc)
file(GLOB_RECURSE CALCULATORSERVER_GEN_SRCS ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/src/*.cc)
file(GLOB_RECURSE CALCULATORSERVER_GEN_SRCS_VECTOR ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/vector/*.cc)
set(CALCULATORSERVER_GEN_SRCS ${CALCULATORSERVER_GEN_SRCS} ${CALCULATORSERVER_GEN_SRCS_SOMEIP} ${CALCULATORSERVER_GEN_SRCS_VECTOR})
message(STATUS "CALCULATORSERVER_GEN_SRCS: ${CALCULATORSERVER_GEN_SRCS}")

# Build
add_executable(${TARGET_NAME} ${CALCULATORSERVER_SRCS} ${CALCULATORSERVER_GEN_SRCS})

# Collect Includes
target_include_directories(${TARGET_NAME} PRIVATE
    ${VAC_INCLUDE_DIRS}
    ${PERSISTENCY_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/includes
    ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/someip-posix
    ${ARA_LOGGING_INCLUDE_DIRS}
)

target_link_libraries(${TARGET_NAME}
    ${ARA_SOMEIP_POSIX_LIBRARIES}
    ${PERSISTENCY_LIBRARIES}
    ${ADAPTIVEPLATFORM_LIBRARIES}
    ${ARA_LOGGING_LIBRARIES}
    ${VAC_LIBRARIES}
)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ARA_EXEC_FLAGS}")
target_link_libraries(${TARGET_NAME} ${ARA_EXEC_LIBRARIES})

# Deploy
install(TARGETS ${TARGET_NAME} RUNTIME DESTINATION /opt/${TARGET_NAME}/bin)
install(FILES ${MANIFEST_FILE_SERVER} PERMISSIONS OWNER_READ GROUP_READ WORLD_READ DESTINATION /opt/${TARGET_NAME}/etc RENAME ${MANIFEST_TARGET_FILENAME})

# Deploy
install(FILES ${PROJECT_SOURCE_DIR}/src-gen/etc/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/application.json PERMISSIONS OWNER_READ GROUP_READ WORLD_READ DESTINATION /opt/${TARGET_NAME}/etc/)
install(FILES ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/manifest/someip/application-gen.json PERMISSIONS OWNER_READ GROUP_READ WORLD_READ DESTINATION /opt/${TARGET_NAME}/etc/)
install(FILES ${PROJECT_SOURCE_DIR}/src-gen/${ADAPTIVE_AUTOSAR_APPLICATION_NAME}/manifest/em/${TARGET_NAME}/manifest.json PERMISSIONS OWNER_READ GROUP_READ WORLD_READ DESTINATION /opt/${TARGET_NAME}/etc/ RENAME manifest.json)
